--- a/index.pug
+++ b/index.pug
@@ -2,7 +2,7 @@ doctype html
 html(lang="en")
   head
     title= pageTitle
-    link(rel='stylesheet', href='app/styles/main.css')
+    link(rel='stylesheet', href='styles/main.css')
   body
     div#react-app
     script(type='text/javascript').
